# CabbageFramework

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
Examples/: CMakeLists.txt  main.cpp
Src/: CMakeLists.txt  CabbageEngine.h  CabbageFramework.cpp  CabbageFramework.h  Components.hpp
Src/ECS/: Components.h  DemoSystem.cpp  DemoSystem.h  ECSCore.cpp  ECSCore.h  ECSWorld.cpp  ECSWorld.h  Events.hpp  ISystem.cpp  ISystem.h  ResourceSystem.cpp  ResourceSystem.h  TaskScheduler.h
Src/Hardware/: HardwareSystem.cpp  HardwareSystem.h
Src/Multimedia/Animation/: AnimationSystem.cpp  AnimationSystem.h
Src/Multimedia/Audio/: AudioSystem.cpp  AudioSystem.h
Src/Multimedia/Geometry/: GeometrySystem.cpp  GeometrySystem.h
Src/Multimedia/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
Src/Multimedia/Rendering/: RenderingSystem.cpp  RenderingSystem.h
Src/Resource/: Resource.h  ResourceSystem.cpp  ResourceSystem.h
